Update XenReference links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         This microtonal theory calculator is about ternary scales, scales with
         three step sizes. It specializes in
         <a
-          href="https://xenreference.com/index.php?title=Aberrismic theory"
+          href="https://xenreference.com/w/Aberrismic theory"
           target="_blank"
           >aberrismic theory</a
         >, developed by groundfault, inthar, and others.
@@ -121,7 +121,7 @@
               />
               <label for="mos-subst"
                 ><a
-                  href="https://xenreference.com/index.php?title=MOS_substitution"
+                  href="https://xenreference.com/w/MOS_substitution"
                   target="_blank"
                   >MOS substitution</a
                 >
